force-app/main/default/objects/Opportunity_Client_Subject__c/Opportunity_Client_Subject__c.object-meta.xml
<CustomObject>
    <description>Custom object to track additional clients and subjects for an opportunity.</description>
    <label>Opportunity Client/Subject</label>
    <nameField>
        <displayFormat>REL-{000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Clients/Subjects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>