force-app/main/default/objects/Opportunity_Client_Subject__c/fields/Client_Subject__c.field-meta.xml
<CustomField>
    <fullName>Client_Subject__c</fullName>
    <inlineHelpText>Client: parties which signed/acceded to HL&apos;s EL (or are anticipated to do so). 
Subject: underlying company</inlineHelpText>
    <label>Client/Subject</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunity Clients/Subjects</relationshipLabel>
    <relationshipName>Opportunity_Clients_Subjects</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>