force-app/main/default/objects/Opportunity_Client_Subject__c/fields/Client_Subject_Name_Form__c.field-meta.xml
<CustomField>
    <fullName>Client_Subject_Name_Form__c</fullName>
    <formula>Client_Subject__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client/Subject Name Form</label>
    <type>Text</type>
</CustomField>