force-app/main/default/objects/Opportunity_Client_Subject__c/fields/ClientHoldings__c.field-meta.xml
<CustomField>
    <fullName>ClientHoldings__c</fullName>
    <inlineHelpText>If company-side mandate, input the % shareholding.

Split of clients&apos; total debt holdings as at the point of HL&apos;s engagement (i.e. for each client = client debt holdings across all debt tranches / total holdings of clients across all debt tranches)</inlineHelpText>
    <label>Client Holdings %</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>