force-app/main/default/objects/Opportunity_Client_Subject__c/fields/ClientHoldingsMM__c.field-meta.xml
<CustomField>
    <fullName>ClientHoldingsMM__c</fullName>
    <inlineHelpText>If company-side mandate, leave it blank.</inlineHelpText>
    <label>Client Holdings (MM)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>