force-app/main/default/objects/Opportunity_Client_Subject__c/fields/ClientKeyCreditorLink__c.field-meta.xml
<CustomField>
    <fullName>ClientKeyCreditorLink__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>When a &quot;Client&quot; record is created then a process creates a Key Creditor record for that client and this field is use to link the two.  This field is only used on FR Opportunities when the job type is &quot;Credit Advisors.</description>
    <label>Client/Key Creditor Link</label>
    <referenceTo>Opportunity_Client_Subject__c</referenceTo>
    <relationshipLabel>Opportunity Clients/Subjects (Client-Key Creditor Link)</relationshipLabel>
    <relationshipName>Opportunity_Clients_Subjects1</relationshipName>
    <type>Lookup</type>
</CustomField>