force-app/main/default/objects/Opportunity_Client_Subject__c/fields/DebtHoldingsMM__c.field-meta.xml
<CustomField>
    <fullName>DebtHoldingsMM__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Latest (par) debt holding information available across any debt instruments in the capital structure; to be updated with final debt holdings at transaction closing</inlineHelpText>
    <label>Debt Holdings (MM)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>