force-app/main/default/objects/Opportunity_Client_Subject__c/fields/Does_PE_Own_High_Percent__c.field-meta.xml
<CustomField>
    <fullName>Does_PE_Own_High_Percent__c</fullName>
    <inlineHelpText>Does any PE Firm individually own 10% or more of the equity</inlineHelpText>
    <label>Does PE Own High Percent</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>