force-app/main/default/objects/Opportunity_Client_Subject__c/fields/ESOP__c.field-meta.xml
<CustomField>
    <fullName>ESOP__c</fullName>
    <label>ESOP %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>