force-app/main/default/objects/Opportunity_Client_Subject__c/fields/Financial_Advisors__c.field-meta.xml
<CustomField>
    <fullName>Financial_Advisors__c</fullName>
    <description>Financial Advisor(s) (other than Houlihan Lokey)</description>
    <label>Financial Advisors</label>
    <length>312</length>
    <type>LongTextArea</type>
</CustomField>