force-app/main/default/objects/Opportunity_Client_Subject__c/fields/Insiders__c.field-meta.xml
<CustomField>
    <fullName>Insiders__c</fullName>
    <label>Insiders %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>