force-app/main/default/objects/Opportunity_Client_Subject__c/fields/KeyCreditorCreated__c.field-meta.xml
<CustomField>
    <fullName>KeyCreditorCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Key Creditor Created</label>
    <type>Checkbox</type>
</CustomField>