force-app/main/default/objects/Opportunity_Client_Subject__c/fields/KeyCreditorImportance__c.field-meta.xml
<CustomField>
    <fullName>KeyCreditorImportance__c</fullName>
    <inlineHelpText>Subjective assessment of creditor importance as high, medium or low taking into consideration parameters such as committee membership, % holdings and thought leadership. Not Required for Clients/Subjects</inlineHelpText>
    <label>Key Creditor Importance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
                <default>true</default>
                <label>Medium</label>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>