force-app/main/default/objects/Opportunity_Client_Subject__c/fields/KeyCreditorWeighting__c.field-meta.xml
<CustomField>
    <fullName>KeyCreditorWeighting__c</fullName>
    <inlineHelpText>Subjective assessment allocation out of 100% amongst identified key creditors based on their level of influence in the transaction taking into consideration parameters such as committee membership, % holdings and thought leadership</inlineHelpText>
    <label>Key Creditor Weighting %</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>