force-app/main/default/objects/Opportunity_Client_Subject__c/fields/LineOfBusiness__c.field-meta.xml
<CustomField>
    <fullName>LineOfBusiness__c</fullName>
    <description>Opportunity&apos;s Line of Business value, used in the Client/Subject Process Builder.</description>
    <formula>TEXT(Opportunity__r.Line_of_Business__c)</formula>
    <label>Line of Business</label>
    <type>Text</type>
</CustomField>