force-app/main/default/objects/Opportunity_Client_Subject__c/fields/Market_Cap_MM__c.field-meta.xml
<CustomField>
    <fullName>Market_Cap_MM__c</fullName>
    <label>Market Cap ($MM)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>