force-app/main/default/objects/Opportunity_Client_Subject__c/fields/NFP__c.field-meta.xml
<CustomField>
    <fullName>NFP__c</fullName>
    <label>NFP %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>