force-app/main/default/objects/Opportunity_Client_Subject__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity__c</referenceTo>
    <relationshipLabel>Additional Clients/Subjects</relationshipLabel>
    <relationshipName>Opportunity_Clients_Subjects</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>