force-app/main/default/objects/Opportunity_Client_Subject__c/fields/Opportunity_Status__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Status__c</fullName>
    <formula>Opportunity__r.Status__c</formula>
    <label>Opportunity Status</label>
    <type>Text</type>
</CustomField>