force-app/main/default/objects/Opportunity_Client_Subject__c/fields/Original_Name__c.field-meta.xml
<CustomField>
    <fullName>Original_Name__c</fullName>
    <label>Previous Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>