force-app/main/default/objects/Opportunity_Client_Subject__c/fields/Other_Financial_Advisor_Services__c.field-meta.xml
<CustomField>
    <fullName>Other_Financial_Advisor_Services__c</fullName>
    <description>Describe the services being provided by other Financial Advisor(s)</description>
    <label>Other Financial Advisor Services</label>
    <length>8000</length>
    <type>LongTextArea</type>
</CustomField>