force-app/main/default/objects/Opportunity_Client_Subject__c/fields/Other_Related_Object_Id__c.field-meta.xml
<CustomField>
    <fullName>Other_Related_Object_Id__c</fullName>
    <label>Other Related Object Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>