force-app/main/default/objects/Opportunity_Client_Subject__c/fields/Outside_Counsel__c.field-meta.xml
<CustomField>
    <fullName>Outside_Counsel__c</fullName>
    <description>Outside Counsel - Identify the name(s) of all law firm(s) and attorney(ies)</description>
    <label>Outside Counsel</label>
    <length>312</length>
    <type>LongTextArea</type>
</CustomField>