force-app/main/default/objects/Opportunity_Client_Subject__c/fields/Ownership__c.field-meta.xml
<CustomField>
    <fullName>Ownership__c</fullName>
    <formula>TEXT(Client_Subject__r.Ownership)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ownership</label>
    <type>Text</type>
</CustomField>