force-app/main/default/objects/Opportunity_Client_Subject__c/fields/Primary__c.field-meta.xml
<CustomField>
    <fullName>Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The primary client or subject defined on the opportunity level.</inlineHelpText>
    <label>Primary?</label>
    <type>Checkbox</type>
</CustomField>