force-app/main/default/objects/Opportunity_Client_Subject__c/fields/Primary_Formula__c.field-meta.xml
<CustomField>
    <fullName>Primary_Formula__c</fullName>
    <formula>IF(Primary__c,&quot;TRUE&quot;,&quot;FALSE&quot;)</formula>
    <label>Primary Formula</label>
    <type>Text</type>
</CustomField>