force-app/main/default/objects/Opportunity_Client_Subject__c/fields/Private_Equity_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Private_Equity_Ownership__c</fullName>
    <label>Private Equity Ownership %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>