force-app/main/default/objects/Opportunity_Client_Subject__c/fields/Public_Or_Private__c.field-meta.xml
<CustomField>
    <fullName>Public_Or_Private__c</fullName>
    <description>Used on the FEIS form, required by legal for the user to specify the ownership of the company</description>
    <label>Public Or Private</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>