force-app/main/default/objects/Opportunity_Client_Subject__c/fields/RevenueAllocation__c.field-meta.xml
<CustomField>
    <fullName>RevenueAllocation__c</fullName>
    <inlineHelpText>Subjective allocation out of 100% of credit for HL&apos;s having been mandated</inlineHelpText>
    <label>Revenue Allocation %</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>