force-app/main/default/objects/Opportunity_Client_Subject__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adverse</fullName>
            </value>
            <value>
                <fullName>Buyer Contact</fullName>
            </value>
            <value>
                <fullName>Buyer Financial Advisor</fullName>
            </value>
            <value>
                <fullName>Buyer Legal Counsel</fullName>
            </value>
            <value>
                <fullName>Equity Holder</fullName>
            </value>
            <value>
                <fullName>Financial Advisor</fullName>
            </value>
            <value>
                <fullName>Financial Advisor to Creditor</fullName>
            </value>
            <value>
                <fullName>Financial Advisor to Debtor</fullName>
            </value>
            <value>
                <fullName>Legal Advisor to Creditor</fullName>
            </value>
            <value>
                <fullName>Legal Advisor to Debtor</fullName>
            </value>
            <value>
                <fullName>Legal Counsel</fullName>
            </value>
            <value>
                <fullName>Lender</fullName>
            </value>
            <value>
                <fullName>Majority Owner</fullName>
            </value>
            <value>
                <fullName>Management Contact</fullName>
            </value>
            <value>
                <fullName>Minority Owner</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Post-Transaction</fullName>
            </value>
            <value>
                <fullName>Pre-Transaction</fullName>
            </value>
            <value>
                <fullName>Primary Contact</fullName>
            </value>
            <value>
                <fullName>Seller Legal Counsel</fullName>
            </value>
            <value>
                <fullName>Seller Majority Owner</fullName>
            </value>
            <value>
                <fullName>Seller Management Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>