force-app/main/default/objects/Opportunity_Client_Subject__c/fields/Shareholder_Vote__c.field-meta.xml
<CustomField>
    <fullName>Shareholder_Vote__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Shareholder vote in connection with the transaction</description>
    <label>Shareholder Vote</label>
    <type>Checkbox</type>
</CustomField>