force-app/main/default/objects/Opportunity_Client_Subject__c/recordTypes/Additional_Client.recordType-meta.xml
<RecordType>
    <fullName>Additional_Client</fullName>
    <active>true</active>
    <description>Non-FR &quot;Client&quot; Type</description>
    <label>zzzAdditional Client</label>
</RecordType>