force-app/main/default/objects/Opportunity_Client_Subject__c/recordTypes/Additional_Subject.recordType-meta.xml
<RecordType>
    <fullName>Additional_Subject</fullName>
    <active>true</active>
    <description>Non-FR &quot;Subject&quot; Type</description>
    <label>zzzAdditional Subject</label>
</RecordType>