force-app/main/default/objects/Opportunity_Client_Subject__c/recordTypes/Client.recordType-meta.xml
<RecordType>
    <fullName>Client</fullName>
    <active>true</active>
    <description>Type = &quot;Client&quot;</description>
    <label>Client</label>
</RecordType>