force-app/main/default/objects/Opportunity_Client_Subject__c/recordTypes/Contra.recordType-meta.xml
<RecordType>
    <fullName>Contra</fullName>
    <active>true</active>
    <description>Type = &quot;Contra&quot;</description>
    <label>Contra</label>
</RecordType>