force-app/main/default/objects/Opportunity_Client_Subject__c/recordTypes/Key_Creditor.recordType-meta.xml
<RecordType>
    <fullName>Key_Creditor</fullName>
    <active>true</active>
    <description>Type = &quot;Key Creditor&quot;</description>
    <label>Key Creditor</label>
</RecordType>