force-app/main/default/objects/Opportunity_Client_Subject__c/recordTypes/Other.recordType-meta.xml
<RecordType>
    <fullName>Other</fullName>
    <active>true</active>
    <description>Type = &quot;Other&quot; A &quot;Type (Other)&quot;  text field has been provided if the &quot;Other&quot; specific name needs to be saved.</description>
    <label>Other</label>
</RecordType>