force-app/main/default/objects/Opportunity_Client_Subject__c/recordTypes/PE_Firm.recordType-meta.xml
<RecordType>
    <fullName>PE_Firm</fullName>
    <active>true</active>
    <description>Type = &quot;PE Firm&quot;</description>
    <label>PE Firm</label>
</RecordType>