force-app/main/default/objects/Opportunity_Client_Subject__c/recordTypes/Subject.recordType-meta.xml
<RecordType>
    <fullName>Subject</fullName>
    <active>true</active>
    <description>Type = &quot;Subject&quot;</description>
    <label>Subject</label>
</RecordType>