force-app/main/default/objects/Opportunity_Client_Subject__c/validationRules/MassEditPercentNegativeNotAllowed.validationRule-meta.xml
<ValidationRule>
    <fullName>MassEditPercentNegativeNotAllowed</fullName>
    <active>true</active>
    <description>This validation rule is used to stop negative numbers being added to the Mass Edit Number/Percent fields.</description>
    <errorConditionFormula>(NOT(ISBLANK(ClientHoldings__c)) &amp;&amp;
ClientHoldings__c &lt; 0.0) ||
(NOT(ISBLANK(KeyCreditorWeighting__c)) &amp;&amp;
KeyCreditorWeighting__c &lt; 0.0) ||
(NOT(ISBLANK(RevenueAllocation__c)) &amp;&amp;
RevenueAllocation__c &lt; 0.0) ||
(NOT(ISBLANK(DebtHoldingsMM__c)) &amp;&amp;
DebtHoldingsMM__c &lt; 0)</errorConditionFormula>
    <errorMessage>Negative values are not permitted.</errorMessage>
</ValidationRule>