force-app/main/default/objects/Opportunity_Client_Subject__c/listViews/Individual_Record.listView-meta.xml
<ListView>
    <fullName>Individual_Record</fullName>
    <columns>Client_Subject__c</columns>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Opportunity_Name__c</columns>
    <columns>ClientHoldingsMM__c</columns>
    <columns>ClientHoldings__c</columns>
    <columns>DebtHoldingsMM__c</columns>
    <columns>DebtPercentage__c</columns>
    <columns>KeyCreditorCreated__c</columns>
    <columns>KeyCreditorImportance__c</columns>
    <columns>KeyCreditorWeighting__c</columns>
    <columns>Notes__c</columns>
    <columns>RevenueAllocation__c</columns>
    <columns>Type__c</columns>
    <columns>Role__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Opportunity_Name__c</field>
        <operation>equals</operation>
        <value>Young &amp; Co</value>
    </filters>
    <label>Individual Record</label>
</ListView>